# Projet_Football

./: .gitignore  CHANGELOG-v2-frontend.md  CLAUDE.md  PLAN_ACTION_10sur10.md  Procfile  README.md  STACK_V2_PLAN.md  backfill_logs.txt  debug_api.py  debug_nhl.py  debug_update.py  meta_dataset.csv  pytest.ini  requirements.txt  ruff.toml  run_loop.py  run_pipeline.py  run_update.py  test_api_cs.py  test_api_cs2.py  test_api_cs_l1.py  test_api_halves.py  test_cleansheets.py  test_cs_fields.py  test_db.py  test_db_cs.py  test_dembele.py  test_nhl_pipeline.py  test_regression.py  test_volume.py  worker.py
ProbaLab/: AUDIT_COMPLET.md  AUDIT_PROMPT.md  Lancer Analyses.command  Makefile  install_cron.sh  mypy.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  ruff.toml  run_loop.py  run_migration.py  run_pipeline.py  worker.py
ProbaLab/api/: auth.py  cache.py  evaluate_predictions.py  helpers.py  main.py  metrics.py  response_models.py  schemas.py
ProbaLab/dashboard/: .env.example  .gitignore  README.md  eslint.config.js  generate-types.sh  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts  vitest.config.ts
ProbaLab/migrations/: 001_stats_tables.sql  002_value_columns.sql  005_live_alerts.sql  008_fixtures_events.sql  010_security_fixes.sql  015_best_bets_tracking.sql  016_nhl_player_game_stats.sql  017_nhl_odds.sql  018_embeddings.sql  019_atomic_place_bet.sql  021_best_bets_pivot_categories.sql  050_model_health_log.sql  051_closing_odds.sql  052_model_health_log_clv.sql  053_advanced_features.sql  (+3 more)
(+752 files in other folders)
